Prepare for sharing!

--- a/NemoSite/templates/Nemo.html
+++ b/NemoSite/templates/Nemo.html
@@ -71,10 +71,11 @@
 		  <ul>
 			<li><b>2018.10.19:</b> Birthday </li>
 			<li><b>2019.6.15:</b> <a href="{{ url_for('static', filename='615.jpg') }}" target="_blank">爬行比赛冠军</a> </li>
+			<li><b>2019.12.9:</b> <a href="{{ url_for('static', filename='129.jpg') }}" target="_blank">第一次脱手潜水成功</a> </li>
 		  </ul>
 			<blockquote>
-					  <p>"Thriller is the best-selling album of all time, with estimated sales of 65 million copies worldwide. Jackson's other albums, including Off the Wall (1979), Bad (1987), Dangerous (1991), and HIStory (1995), also rank among the world's best-selling albums. He is recognized as the Most Successful Entertainer of All Time by Guinness World Records.Jackson is one of the few artists to have been inducted into the Rock and Roll Hall of Fame twice, and was also inducted into the Songwriters Hall of Fame and the Dance Hall of Fame as the only dancer from pop and rock music."</p>
-					  <footer><cite>by wiki</cite></footer>
+					  <p>"愿你一生温暖纯良，不舍爱与自由！"</p>
+					  <footer><cite>by Dad</cite></footer>
 			 </blockquote>
 			<h4>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Michael_Jackson" target="_blank">Wikipedia entry</a>.</h4>
 		  </div>  
